--- a/Immanuel.Ffmpeg.csproj
+++ b/Immanuel.Ffmpeg.csproj
@@ -184,7 +184,13 @@
     </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\load_1.gif" />
     <Content Include="Content\load_1.jpg" />
+    <Content Include="Content\load_11.gif" />
+    <Content Include="Content\load_112.gif" />
+    <Content Include="Content\app.css" />
+    <Content Include="Content\share_1.png" />
+    <Content Include="Content\upl-1.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
